# deployment

./: .env  __main__.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
src/keyboards/: basic.py  client_kb.py
src/routers/: client.py  data.py
src/schedule_tasks/: sheduler.py
src/utils/: database.py
